[package]
name = "UIScaleFix"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = {version = "0.59.0", features = ["Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Console", "Win32_System_Threading", "Win32_System_Kernel", "Win32_System_Memory"] }
libc = "0.2"
libc-stdhandle = "0.1.0"
once_cell = "1.18.0"
sunset-rs = { git = "https://github.com/itsmeft24/sunset.git", branch = "x64-support" }
windows = { version = "0.61.1", features = [ "Win32_Graphics_Direct3D9" ]}
pentane = { path = "C:/Projects/Pentane/RustAPI/" }

[lib]
crate-type = ["cdylib"]
